--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,30 @@
     padding: 0%;
     box-sizing: border-box;
 }
+:root{
+    background: url("../images/green-game-table.jpg") no-repeat center center /cover;
+    height: 100vh;
+    font-size: 62.5%;
+}
+@font-face {
+    font-family: 'MotionPicture';
+    src: url(../fonts/MotionPicture.ttf);
+}
+.golden-text{
+    font-family: 'MotionPicture', Georgia, 'Times New Roman', Times, serif;
+    font-size: 8rem;
+    color: darkgoldenrod;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.card-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.enter-play-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
