--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,9 @@
     flex-direction: row;
     justify-content: space-around;
 }
+.card-size{
+    width: 8rem;
+}
 .enter-play-wrapper{
     display: flex;
     flex-direction: column;
@@ -36,14 +39,26 @@
     font-size: 12rem;
     color: gold;
     text-shadow: 4px 4px 4px rgba(0, 0, 0, 1);
+    
 }
 .enter:hover{
-    color: rgb(228, 213, 128);
+    color:rgb(180, 13, 13);
 }
 .enter:active{
     transform: scale(0.98);
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
     transform: translateY(4px);
+}
+.how-to{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 4rem;
+    margin-top: 2rem;
+    color: antiquewhite;
+    text-shadow: 1px 1px 1px #030303;
+}
+.how-to:hover{
+    color: #030303;
+    text-shadow: 1px 1px 1px antiquewhite;
 }
 a{
     text-decoration: none;
