--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@
     font-size: 8rem;
     color:gold;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 4rem;
     margin-bottom: 2rem;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 }
@@ -64,6 +64,26 @@
 a{
     text-decoration: none;
 }
+.modal-hero{
+    /* display: none; */
+    border-radius: 20%;
+    margin-top: 2rem;
+    position:fixed;
+    z-index: 1;
+    left: 2;
+    width: 30rem;
+    height: 25rem;
+    background-color: rgba(140, 188, 230, 0.9);
+}
+.modal-instructions{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    text-align: center;
+    margin-top: 2.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
 
 
 
@@ -77,11 +97,20 @@ a{
     }
     
 }
-/* sizing for desltop */
+/* sizing for desktop */
 @media screen and (min-width:1080px){
     .card-size{
         width:16rem;
         box-shadow: 2px 2px 2px #333333;
+    }
+    .modal-hero{
+        width: 50rem;
+        height: 30rem;
+    }
+    .modal-instructions{
+        margin-top: 4rem;
+        font-size: 2rem;
+        line-height: 3rem;
     }
     
 }
