--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,15 +65,15 @@ a{
     text-decoration: none;
 }
 .modal-hero{
-    /* display: none; */
+    display: none;
     border-radius: 20%;
     margin-top: 2rem;
-    position:fixed;
+    position: absolute;
     z-index: 1;
     left: 2;
     width: 30rem;
-    height: 25rem;
-    background-color: rgba(140, 188, 230, 0.9);
+    height: 28rem;
+    background-color: rgb(221, 223, 126);
 }
 .modal-instructions{
     font-family: Arial, Helvetica, sans-serif;
@@ -83,6 +83,13 @@ a{
     margin-top: 2.5rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+}
+.close-modal{
+    width: 10rem;
+    margin: 1rem;
+    padding: 5px 5px;
+    background-color: green;
+    color: gold;
 }
 
 
@@ -94,6 +101,10 @@ a{
     .card-size{
         width:12rem;
         box-shadow: 2px 2px 2px #333333;
+    }
+    .golden-text{
+        margin-top: 10%;
+        font-size: 10rem;
     }
     
 }
@@ -112,6 +123,11 @@ a{
         font-size: 2rem;
         line-height: 3rem;
     }
+    .golden-text{
+        margin-top: 0%;
+        font-size: 12rem;
+    }
+    
     
 }
 
