--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,12 @@
     justify-content: space-around;
 }
 
+
 .card-size {
     width: 8rem;
     box-shadow: 2px 2px 2px #333333;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 
 .enter-play-wrapper {
@@ -74,6 +77,7 @@
 .how-to:hover {
     color: #030303;
     text-shadow: 1px 1px 1px antiquewhite;
+    cursor: pointer;
 }
 
 a {
@@ -117,25 +121,128 @@ a {
     font-family: 'MotionPicture';
     font-size: 4rem;
     text-align: center;
+    text-shadow: 1px 1px 2px gold;
 }
-
+/* results */
 .result-style{
     margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: antiquewhite;
-    width: 24rem;
-    height: 6rem;
-    margin-top: 4rem;
-    font-size: 2rem;
+    background-color:gold;
+    width: 20rem;
+    height: 3rem;
+    margin-top: 1rem;
+    font-size: 1.5rem;
     letter-spacing: 0.1rem;
+    box-shadow: 2px 2px 2px #333333;
 
 }
 .result-style ul li {
     display: inline;
-
 }
+/* win / lose Box */
+.win-lose-area{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 4rem;
+    text-align: center;
+    color: gold;
+}
+/* Dealer Section */
+
+.dealer-card-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+.dealer-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+}
+#dealer-play{
+    width: 18rem;
+    height: 4.5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 3.5rem;
+    font-weight: 600;
+    letter-spacing: 0.3rem;
+    color:#000000;
+    background-color: gold;
+    transition: 0.3s;
+}
+#dealer-play:hover{
+    background-color: #030303;
+    color: gold;
+    cursor: pointer;
+}
+#dealer-play:active{
+    color: black;
+}
+/* Player Section */
+
+.player-card-wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+.player-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+}
+#player-play{
+    width: 18rem;
+    height: 4.5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 3.5rem;
+    font-weight: 600;
+    letter-spacing: 0.3rem;
+    color:#000000;
+    background-color: gold;
+    transition: 0.3s;
+}
+#player-play:hover{
+    background-color: red;
+    cursor: pointer;
+}
+#player-play:active{
+    background-color: #000000;
+}
+.options{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.player-options{
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    width: 8rem;
+    height: 4rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 600;
+    font-size: 2rem;
+    color:#000000;
+    background-color: gold;
+    text-shadow: 1px 1px 2px #333333;
+    letter-spacing: 0.25rem;
+    transition: 0.3s;
+}
+.player-options:hover{
+    background-color: red;
+    cursor: pointer;
+}
+.player-options:active{
+    background-color: #000000;
+}
+
 
 
 
