--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,22 +159,20 @@ a {
     align-items: center;
     margin-top: 2rem;
 }
-.dealer-button{
+.dealer-window{
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 2rem;
 }
-#dealer-play{
+.dealer-play{
     width: 18rem;
     height: 4.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 3.5rem;
     font-weight: 600;
-    letter-spacing: 0.3rem;
     color:#000000;
     background-color: gold;
-    transition: 0.3s;
 }
 #dealer-play:hover{
     background-color: #030303;
