--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,13 @@
 }
 
 :root {
-    background: url("../images/green-game-table.jpg") no-repeat center center /cover;
+    background: url("../images/floating-ace-1.jpg") no-repeat center center /cover;
     height: 100vh;
     font-size: 62.5%;
+}
+#green-table{
+    background: url("../images/green-game-table.jpg") no-repeat center center /cover;
+    height: 100vh;
 }
 
 @font-face {
@@ -18,6 +22,12 @@
 }
 
 /* Hero page styles */
+.overlay{
+    background-color: rgba(62, 62, 61, 0.6);
+    width: 80%;
+    height: 90vh;
+    margin: 0 auto;
+}
 .golden-text {
     font-family: 'MotionPicture', Georgia, 'Times New Roman', Times, serif;
     font-size: 8rem;
@@ -119,6 +129,7 @@ a {
 }
 
 /* Game page styles */
+
 .logo {
     font-family: 'MotionPicture';
     font-size: 4rem;
@@ -145,6 +156,7 @@ a {
 }
 /* win / lose Box */
 .win-lose-area{
+    margin-top: 6rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 4rem;
     text-align: center;
@@ -166,6 +178,8 @@ a {
     margin-top: 2rem;
 }
 .dealer-play{
+    padding-top: 0.2rem;
+    padding-left: 0.2rem;
     width: 18rem;
     height: 4.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -198,6 +212,7 @@ a {
     margin-top: 2rem;
 }
 #player-play{
+    padding-left: 0.2rem;
     width: 18rem;
     height: 4.5rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -254,11 +269,14 @@ a {
         margin-top: 10%;
         font-size: 10rem;
     }
-
+    
 }
 
 /* sizing for desktop */
 @media screen and (min-width:1080px) {
+    body{
+        background-image: url("../images/floating-ace-1.jpg") no-repeat;
+    }
     .card-size {
         width: 16rem;
         box-shadow: 2px 2px 2px #333333;
@@ -278,5 +296,8 @@ a {
     .golden-text {
         margin-top: 0%;
         font-size: 12rem;
+    }
+    .win-lose-area{
+        margin-top: 0;
     }
 }
