--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,22 +96,23 @@ a {
 /* Modal styles */
 .modal-hero {
     display: none;
-    border-radius: 20%;
+    border-radius: 10%;
     margin-top: 2rem;
     position: absolute;
     z-index: 1;
     left: 2;
-    width: 30rem;
-    height: 28rem;
-    background-image: linear-gradient(45deg, rgb(225, 225, 117),antiquewhite);
+    width: 25rem;
+    height: 25rem;
+    background-image:linear-gradient(45deg,black, #666666);
 }
 
 .modal-instructions {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.6rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: gold;
+    font-size: 1.8rem;
     line-height: 2rem;
     text-align: center;
-    margin-top: 2.5rem;
+    margin-top: 2rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
@@ -119,9 +120,9 @@ a {
 .close-modal {
     width: 10rem;
     margin: 1rem;
-    border-radius: 50%;
+    border-radius: 10%;
     padding: 5px 5px;
-    background-color: green;
+    background-color: rgb(5, 71, 5);
     color: gold;
 }
 .close-modal:hover{
@@ -288,7 +289,6 @@ a {
     }
 
     .modal-instructions {
-        margin-top: 4rem;
         font-size: 2rem;
         line-height: 3rem;
     }
