added player current score to player area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,7 +234,7 @@ a {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 3.5rem;
     font-weight: 600;
-    letter-spacing: 0.3rem;
+    text-align: center;
     color: #000000;
     background-color: gold;
     text-align: left;
