--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,6 @@ a {
     margin-top: 2rem;
     position: absolute;
     z-index: 1;
-    left: 2;
     width: 25rem;
     height: 28rem;
     background-image: linear-gradient(45deg, black, #666666);
@@ -148,27 +147,6 @@ a {
     text-align: center;
     text-shadow: 1px 1px 2px gold;
 }
-
-/* results */
-.result-style {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: gold;
-    width: 20rem;
-    height: 3rem;
-    margin-top: 1rem;
-    font-size: 1.5rem;
-    letter-spacing: 0.1rem;
-    box-shadow: 2px 2px 2px #333333;
-
-}
-
-.result-style ul li {
-    display: inline;
-}
-
 /* win / lose Box */
 .win-lose-area {
     margin-top: 2rem;
@@ -179,7 +157,6 @@ a {
 }
 
 /* Dealer Section */
-
 .dealer-card-wrapper {
     display: flex;
     flex-direction: row;
@@ -247,6 +224,7 @@ a {
     color: #000000;
     background-color: gold;
     text-align: left;
+    box-shadow: 2px 2px 2px #000000;
     transition: 0.3s;
 }
 
@@ -278,7 +256,7 @@ a {
     line-height: 1.6rem;
     color: #000000;
     background-color: gold;
-    text-shadow: 1px 1px 2px #333333;
+    box-shadow: 2px 2px 2px #000000;
     transition: 0.3s;
 }
 
@@ -314,7 +292,7 @@ a {
 /* sizing for desktop */
 @media screen and (min-width:1080px) {
     body {
-        background-image: url("../images/floating-ace-1.jpg") no-repeat;
+        background: url("../images/floating-ace-1.jpg") no-repeat;
     }
 
     .card-size {
